--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,7 +208,7 @@ nav.navbar.navbar-default{
     color: #000000;
     width: 80%;}
     .static-content p{
-        font-size: 1.2em;
+        font-size: 1rem;
         letter-spacing: 0.3px;}
     .static-content h1{
         font-size: 3em; letter-spacing: 2px; width: 50%; text-align: center;
@@ -506,7 +506,7 @@ nav.navbar.navbar-default{
     margin-left: -1%;}
 
 .static-content.code-sample-page p{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     width: 90%;}
 
 /* Specific styles for javascript-program pages */
@@ -542,11 +542,32 @@ nav.navbar.navbar-default{
     margin-left: -35%;
     margin-top: 10%;}
 
-
-
-
-
-
+/**
+ * CSS SAMPLE PAGE STYLES
+ */
+.btn-animate{
+    padding: 1rem;
+    margin-top: 1.5rem;
+    border-radius: 1rem;
+    background-color: #82734C;
+    color: #FFFFFF;
+    transition-duration: 0.75s;
+    font-weight: bold;
+    width: 150px;
+}
+.btn-animate:hover{
+    cursor: pointer;
+    color: #221E14;
+    background-color: #FFFFFF;
+    transition-duration: 0.75s;
+}
+ 
+.code-example > .indent-1{
+    margin-left: 1%;
+ }
+.code-example > .indent-2{
+    margin-left: 2%;
+}
 
 
 
