--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,13 +127,15 @@ nav.navbar.navbar-default{
 .nav-third-level {
     list-style-type: none;
     background-color: #b4ab93;
-    text-decoration: none;}
+    text-decoration: none;
+    display:block;}
     .nav-third-level li{
         padding: 2%;}
         .nav-third-level li:hover{
             background-color: #82734c;}
             .nav-third-level:hover a{
                 cursor: pointer;
+                display:block;
                 text-decoration: none;}
 
 /**
@@ -571,3 +573,66 @@ nav.navbar.navbar-default{
 
 
 
+
+
+
+
+.dropdown-menu{
+     -moz-animation: fadein 2s;
+}
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+@-moz-keyframes fadein{
+    from {opacity:0;}
+    to{opacity:1;}
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+    transition-duration: 0.5s;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+    transition-duration: 0.5s !important;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
