--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,187 @@
+/**
+ * EXAMPLE OF HARD SET OF FONT WEIGHT/BASE
+ */
+/*@font-face {
+    font-weight:400;
+    font-family:'Rleud';
+    src:url('webfonts/335DE4_1_0.eot');
+    src:url('webfonts/335DE4_1_0.eot?#iefix') format('embedded-opentype'),
+        url('webfonts/335DE4_1_0.woff2') format('woff2'),
+        url('webfonts/335DE4_1_0.woff') format('woff'),
+        url('webfonts/335DE4_1_0.ttf') format('truetype'); }*/
+
+
+/* ===== COLOR MAP =====
+*  Black = #000000;
+*  White = #FFFFFF;
+*  etc
+* *----------------*/
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i');
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+
+
+a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, meter, nav, object, ol, output, p, pre, progress, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video { border:0;     margin:0;   padding:0;  outline:0; } article, aside, details, dt, figcaption, figure, footer, header, hgroup, menu, nav, section { display:block; } audio, canvas, video { display:inline-block; } button, input, select, textarea { font:inherit;  box-sizing:border-box;  -moz-box-sizing:border-box;     -webkit-box-sizing:border-box; } button, input[type="button"], input[type="reset"], input[type="submit"] { cursor:pointer;  padding-inline-end:0;   padding-inline-start:0; } button[disabled], input[disabled], textarea[disabled] { cursor:default; } button::-moz-focus-inner, input::-moz-focus-inner { border:0;   padding:0; } input[type="checkbox"], input[type="radio"] { padding:0; } textarea { overflow:auto;   vertical-align:top; } img { -ms-interpolation-mode:bicubic; } pre { white-space:pre-wrap;   word-wrap:break-word; } table { border-spacing:0;   border-collapse:collapse; } a:focus { outline:thin dotted; } h1 { font-size:2em;    margin:0.67em 0 0.335em; } h2 { font-size:1.5em;    margin:0.83em 0 0.415em; } h3 { font-size:1.17em;   margin:1em 0 0.5em; } h4 { font-size:1em;   margin:1.1em 0 0.55em; } h5 { font-size:0.83em;     margin:1.25em 0 0.6125em; } h6 { font-size:0.75em;  margin:1.33em 0 0.665em; } p, dl { margin:1em 0; } ul, ol { margin:0 0 1em 2em; }   ul ul, ol ul,   ul ol, ol ol {  margin:0 0 0 2em; } dd { margin:0 0 1em 0.5em; } blockquote, figure { margin:1em 2em; } small { font-size:75%; } sub, sup { font-size:75%;  line-height:0;  position:relative;  vertical-align:baseline; } sup { top:-0.5em; } sub { bottom:-0.25em; }
+
+.col-5,.col-10,.col-15,.col-20,.col-25,.col-26,.col-30,.col-33,.col-35,.col-40,.col-45,.col-50,
+.col-55,.col-60,.col-63,.col-65,.col-66,.col-70,.col-75,.col-80,.col-85,.col-90,.col-95,.col-100 {
+    float:left;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box; }
+    .col-5 { width:5%; }
+    .col-10 { width:10%; }
+    .col-15 { width:15%; }
+    .col-20 { width:20%; }
+    .col-25 { width:25%; }
+    .col-26 { width:26.66%; }
+    .col-30 { width:30%; }
+    .col-33 { width:33.33%; }
+    .col-35 { width:35%; }
+    .col-40 { width:40%; }
+    .col-45 { width:45%; }
+    .col-50 { width:50%; }
+    .col-55 { width:55%; }
+    .col-60 { width:60%; }
+    .col-63 { width:63.33%; }
+    .col-65 { width:65%; }
+    .col-66 { width:66.66%; }
+    .col-70 { width:70%; }
+    .col-75 { width:75%; }
+    .col-80 { width:80%; }
+    .col-85 { width:85%; }
+    .col-90 { width:90%; }
+    .col-95 { width:95%; }
+    .col-100 { width:100%; }
+
+    .push-3 { margin-left:3.33%; }
+    .push-5 { margin-left:5%; }
+    .push-6 { margin-left:6.66%; }
+    .push-10 { margin-left:10%; }
+    .push-15 { margin-left:15%; }
+    .push-20 { margin-left:20%; }
+    .push-25 { margin-left:25%; }
+    .push-26 { margin-left:26.66%; }
+    .push-30 { margin-left:30%; }
+    .push-33 { margin-left:33.33%; }
+    .push-35 { margin-left:35%; }
+    .push-40 { margin-left:40%; }
+    .push-45 { margin-left:45%; }
+    .push-50 { margin-left:50%; }
+    .push-55 { margin-left:55%; }
+    .push-60 { margin-left:60%; }
+    .push-63 { margin-left:63.33%; }
+    .push-65 { margin-left:65%; }
+    .push-66 { margin-left:66.66%; }
+    .push-70 { margin-left:70%; }
+    .push-75 { margin-left:75%; }
+    .push-80 { margin-left:80%; }
+    .push-85 { margin-left:85%; }
+    .push-90 { margin-left:90%; }
+    .push-95 { margin-left:95%; }
+
+    .pad-3 { padding-left:1.66%;padding-right:1.66%; }
+    .pad-5 { padding-left:2.5%;padding-right:2.5%; }
+    .pad-6 { padding-left:3.33%;padding-right:3.33%; }
+    .pad-10 { padding-left:5%;padding-right:5%; }
+    .gutter-sm { padding-left:.5rem;margin-bottom:.5rem;padding-right:.5rem; }
+    .gutter,.gutter-md { padding-left:1rem;margin-bottom:1rem;padding-right:1rem; }
+    .gutter-lg { padding-left:1.5rem;margin-bottom:1.5rem;padding-right:1.5rem; }
+
+    .margin-3 > [class*="col-"] ~ [class*="col-"] { margin-left:3.33%; }
+    .margin-5 > [class*="col-"] ~ [class*="col-"] { margin-left:5%; }
+    .margin-6 > [class*="col-"] ~ [class*="col-"] { margin-left:6.66%; }
+    .margin-10 > [class*="col-"] ~ [class*="col-"] { margin-left:10%; }
+    .layout-right.margin-3 > [class*="col-"] ~ [class*="col-"] { margin-left:0;margin-right:3.33%; }
+    .layout-right.margin-5 > [class*="col-"] ~ [class*="col-"] { margin-left:0;margin-right:5%; }
+    .layout-right.margin-6 > [class*="col-"] ~ [class*="col-"] { margin-left:0;margin-right:6.66%; }
+    .layout-right.margin-10 > [class*="col-"] ~ [class*="col-"] { margin-left:0;margin-right:10%; }
+
+    .align-inner { }
+        .align-inner > [class*="col-"]:first-child { padding-left:0; }
+        .align-inner > [class*="col-"]:last-child { padding-right:0; }
+
+    .table-row { display:table; }
+        .table-row > [class*="col-"] { float:none;display:table-cell;vertical-align:top; }
+
+    .layout-right > [class*="col-"] { float:right; }
+
+    .float-right.push-1, .layout-right > .push-1 { margin-left:0;margin-right:1.33%; }
+    .float-right.push-3, .layout-right > .push-3 { margin-left:0;margin-right:3.33%; }
+    .float-right.push-5, .layout-right > .push-5 { margin-left:0;margin-right:5%; }
+    .float-right.push-6, .layout-right > .push-6 { margin-left:0;margin-right:6.66%; }
+    .float-right.push-10, .layout-right > .push-10 { margin-left:0;margin-right:10%; }
+    .float-right.push-15, .layout-right > .push-15 { margin-left:0;margin-right:15%; }
+    .float-right.push-20, .layout-right > .push-20 { margin-left:0;margin-right:20%; }
+    .float-right.push-25, .layout-right > .push-25 { margin-left:0;margin-right:25%; }
+    .float-right.push-33, .layout-right > .push-26 { margin-left:0;margin-right:26.66%; }
+    .float-right.push-30, .layout-right > .push-30 { margin-left:0;margin-right:30%; }
+    .float-right.push-33, .layout-right > .push-33 { margin-left:0;margin-right:33.33%; }
+    .float-right.push-35, .layout-right > .push-35 { margin-left:0;margin-right:35%; }
+    .float-right.push-40, .layout-right > .push-40 { margin-left:0;margin-right:40%; }
+    .float-right.push-45, .layout-right > .push-45 { margin-left:0;margin-right:45%; }
+    .float-right.push-50, .layout-right > .push-50 { margin-left:0;margin-right:50%; }
+    .float-right.push-55, .layout-right > .push-55 { margin-left:0;margin-right:55%; }
+    .float-right.push-60, .layout-right > .push-60 { margin-left:0;margin-right:60%; }
+    .float-right.push-60, .layout-right > .push-63 { margin-left:0;margin-right:63.33%; }
+    .float-right.push-65, .layout-right > .push-65 { margin-left:0;margin-right:65%; }
+    .float-right.push-66, .layout-right > .push-66 { margin-left:0;margin-right:66.66%; }
+    .float-right.push-70, .layout-right > .push-70 { margin-left:0;margin-right:70%; }
+    .float-right.push-75, .layout-right > .push-75 { margin-left:0;margin-right:75%; }
+    .float-right.push-80, .layout-right > .push-80 { margin-left:0;margin-right:80%; }
+    .float-right.push-85, .layout-right > .push-85 { margin-left:0;margin-right:85%; }
+    .float-right.push-90, .layout-right > .push-90 { margin-left:0;margin-right:90%; }
+    .float-right.push-95, .layout-right > .push-95 { margin-left:0;margin-right:95%; }
+
+.cf, .wrapper { }
+    .cf:after,
+    .cf:before,
+    .row:after,
+    .row:before,
+    .wrapper:after,
+    .wrapper:before {
+        content:"";
+        display:table; }
+    .cf:after,
+    .row:after,
+    .wrapper:after {
+        clear:both; }
+.clear {
+    clear:both;
+    width:100%; }
+
+.clear-left { clear:left; }
+.clear-right { clear:right; }
+.clear-both { clear:both; }
+.clear-none { clear:none; }
+
+.float-left { float:left; }
+    img.float-left { margin:.375em 0.625em .375em 0; }
+.float-right { float:right; }
+    img.float-right { margin:.375em 0 .375em 0.625em; }
+.float-none { float:none; }
+
+.text-left { text-align:left; }
+.text-right { text-align:right; }
+.text-center { text-align:center; }
+.text-justify { text-align:justify; }
+
+/*html{
+    color:#FFF;
+    background:#252525;
+    font:10px/1 'Rleud', sans-serif; }
+body {
+    position:relative; }
+a {
+    cursor:pointer;
+    text-decoration:none;
+    transition-duration:0.5s; }*/
+
+/**
+ * AND OF BG'S BASE STYLES
+ */
+
 
 html{background-color: transparent; font-size: 14px;}
 body{font-family: 'proza_libreregular', sans-serif !important;}
@@ -13,6 +193,7 @@ blockquote{width: 90%;}
 .h1{font-size: 4em !important;}
 .h2{font-size: 3.5rem !important;}
 .h3{font-size: 3rem !important; }
+.h4{font-size: 2rem !important;}
 .mid-size-font{font-family: 'proza_libresemibold', sans-serif; font-size: 2.5rem;}
 .med-size-font{font-family: 'proza_libresemibold', sans-serif; font-size: 1.5rem;}
 .normal-size-font{font-size:1.5rem;}
@@ -643,3 +824,47 @@ nav.navbar.navbar-default{
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+
+
+/**
+ * STARTING OF POSTS/BLOG STYLES
+ */
+.post-btn{
+    color: #FFFFFF !important;
+    background-color: #000000 !important;
+    font-weight: normal !important;
+    border: 1px solid black !important;
+    min-width: 10%;}
+    .post-btn:hover{
+        background-color: #313131 !important;}
+
+.del-post-warn-btn{
+    color: #FFFFFF !important;
+    background-color: #d40000 !important;
+    font-weight: normal !important;
+    border: 1px solid #d40000 !important;
+    margin-right: 10%;
+    min-width: 10%;}
+    .del-post-warn-btn:hover{
+        background-color: #3F0000 !important;
+        color: #FFFFFF !important;}
+
+
+.post-table{
+   margin: 1%;}
+.post-table th{
+    text-transform: uppercase;}
+.post-table thead{
+    border-bottom: 1px solid black;}
+.post-table tr{
+    line-height: 3.5;}
+.post-table td{
+   line-height: 1.5;}
+.post-table tbody{
+    border-bottom: 1px solid black;}
+.post-content p{
+    font-size: 2rem;}
+.post-body{
+    max-width: 250px;
+    height: 50px;
+    overflow: hidden;}
