--- a/public/css/style.css
+++ b/public/css/style.css
@@ -367,13 +367,11 @@ nav.navbar.navbar-default{
 .footer-container{
     width: 100%;
     clear:both;
-    /*background-color: #000000;*/
     background-color: #0b0b0b !important;
     color: #FFFFFF;
     height: 100px;
 }
 .footer{
-    /*background-color: #000000 !important;*/
     padding-top: 1%;
 }
     .footer-left{
@@ -382,7 +380,6 @@ nav.navbar.navbar-default{
 /*        position: relative;*/
         width:47%;}
 .footer-left, .footer-right{ letter-spacing: 0.1rem; 
-    /*background-color:#000000;*/
     background-color: transparent;
 }
 .footer-left > li{font-size:1.5rem;}
@@ -482,7 +479,6 @@ nav.navbar.navbar-default{
     margin-left: 15px;
     padding-bottom: 5px;}
 
-
 .static-content.gallery a{
     border: none;}
     .static-content.gallery a:hover{
@@ -556,6 +552,13 @@ nav.navbar.navbar-default{
     font-size:1.95rem;
     width: 94%;}
 
+.photo-list{
+    color:#252525;
+    text-transform: uppercase;
+}
+.photo-list a{
+    font-size: 2rem;
+}
 
 /**
  * THIS IS BEING USED ON UPLOAD.BLADE.PHP WHICH IS THE OLD UPLOAD FORM AND WILL LIKELY BE REMOVED
@@ -652,9 +655,6 @@ nav.navbar.navbar-default{
         font-size: 1.5rem;}
 
 /* About page: Skillset section */
-.skillset > ul{ 
-/*    margin-left: -1.5%;*/
-}
 .ul-header{ 
    /* padding: 1% 0 0 1%;*/
    padding: 0.5%;
@@ -711,7 +711,9 @@ nav.navbar.navbar-default{
     display: block;
     text-align: left; }
 
-/* General Coding Information page: paragraph text */
+/**
+ * CODE SAMPLE PAGES -- STYLES FOR .static-content.code-sample-page
+ */
 .static-content.general-coding p{
     font-size: 1.5rem;
     width: 90%;}
@@ -719,9 +721,6 @@ nav.navbar.navbar-default{
     border-bottom: 3px solid #1A6FB0;
     box-shadow: #252525 2px 2px 5px;}
 
-/**
- * CODE SAMPLE PAGES -- STYLES FOR .static-content.code-sample-page
- */
 .static-content.code-sample-page h1{
     text-align: left; 
     letter-spacing: 1rem; 
@@ -781,84 +780,63 @@ nav.navbar.navbar-default{
     color: #FFFFFF;
     transition-duration: 0.75s;
     font-weight: bold;
-    width: 150px;
-}
+    width: 150px;}
 .btn-animate:hover{
     cursor: pointer;
     color: #221E14;
     background-color: #FFFFFF;
-    transition-duration: 0.75s;
-}
+    transition-duration: 0.75s;}
  
 .code-example > .indent-1{
-    margin-left: 1%;
- }
+    margin-left: 1%;}
 .code-example > .indent-2{
-    margin-left: 2%;
-}
+    margin-left: 2%;}
 
 .dropdown-menu{
-     -moz-animation: fadein 1s;
-}
-
-
-.dropdown-submenu {
-    position: relative;
-    background-color: #CCC;
-    border-top: 1px solid #252525;
-}
+     -moz-animation: fadein 1s;}
+    .dropdown-submenu {
+        position: relative;
+        background-color: #CCC;
+        border-top: 1px solid #252525;}
+        .dropdown-submenu>.dropdown-menu {
+            top: 0;
+            left: 100%;
+            margin-top: -6px;
+            margin-left: -1px;
+            -webkit-border-radius: 0 6px 6px 6px;
+            -moz-border-radius: 0 6px 6px;
+            border-radius: 0 6px 6px 6px;
+            transition-duration: 0.3s;}
+            .dropdown-submenu:hover>.dropdown-menu {
+                display: block;
+                transition-duration: 0.3s !important;}
+                .dropdown-submenu>a:after {
+                        display: block;
+                        content: " ";
+                        float: right;
+                        width: 0;
+                        height: 0;
+                        border-color: transparent;
+                        border-style: solid;
+                        border-width: 5px 0 5px 5px;
+                        border-left-color: #000;
+                        margin-top: 5px;
+                        margin-right: -10px;}
+                        .dropdown-submenu:hover>a:after {
+                            border-left-color: #fff;}
 
 @-moz-keyframes fadein{
     from {opacity:0;}
     to{opacity:1;}
 }
 
-.dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
-    transition-duration: 0.3s;
-}
-
-.dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-    transition-duration: 0.3s !important;
-}
-
-.dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    /*border-left-color: #ccc;*/
-    border-left-color: #000;
-    margin-top: 5px;
-    margin-right: -10px;
-}
-
-.dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-.dropdown-submenu.pull-left {
-    float: none;
-}
-
-.dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}
+.dropdown-submenu.pull-left {float: none;}
+    .dropdown-submenu.pull-left>.dropdown-menu {
+        left: -100%;
+        margin-left: 10px;
+        -webkit-border-radius: 6px 0 6px 6px;
+        -moz-border-radius: 6px 0 6px 6px;
+        border-radius: 6px 0 6px 6px;}
 
 
 /**
