--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@
 * *----------------*/
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
 
 
@@ -189,7 +189,7 @@ blockquote{width: 90%;}
 
 
 /* Formatting styles */
-.page-header{padding-top: 4em;color: #252525; text-align: center;}
+.page-header{padding-top: 4em;color: #252525; text-align: center;border-bottom: 0px solid #FFF !important;}
 .h1{font-size: 4em !important;}
 .h2{font-size: 3.5rem !important;}
 .h3{font-size: 3rem !important; }
@@ -863,6 +863,15 @@ nav.navbar.navbar-default{
         color: #FFFFFF !important;}
 
 
+/**
+ * Front End Blog Styles
+ */
+.post-title{font-size:2.5rem;font-weight:bold;}
+.post-date{
+    font-size:1.5rem;
+    font-family: 'Open Sans', sans-serif;
+    font-weight:400;
+    letter-spacing: 0px;}
 .post-table{
    margin: 1%;}
 .post-table th{
@@ -875,15 +884,38 @@ nav.navbar.navbar-default{
    line-height: 1.5;}
 .post-table tbody{
     border-bottom: 1px solid black;}
-.post-content p{
-    font-size: 2rem;}
-.post-body{
+/*.post-content p{
+    font-size: 2rem;}*/
+/*.post-body{
     max-width: 250px;
     height: 50px;
-    overflow: hidden;}
+    overflow: hidden;}*/
+.post-body{
+    text-transform: none;
+    font-family: 'Open Sans', sans-serif;
+    
+}
+.post-body p{
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+
+.post-body h1{
+    font-size:2rem;
+}
+.post-body h3{
+    font-size: 1.75rem;
+    text-align:left;
+    padding-left: 0px;
+    letter-spacing:0px;
+
+}
+
+
+
+
 .post-description{
-    background-color: #ccc;
     padding-left: 2%;}
 .post-description p{
-    font-size: 2.25rem !important;
+    font-weight: 600;
 }
