--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,7 +211,7 @@ blockquote{width: 90%;}
 .grey-rgba{background-color:rgba(0,0,0,0.2);}
 
 /* Font Effects */
-.uppercase-shadow{text-transform: uppercase; 
+.uppercase-shadow{text-transform: uppercase;
     /*text-shadow: 4px 2px 6px #404040;*/
 }
 .shadow-uppercase{
@@ -237,12 +237,15 @@ blockquote{width: 90%;}
 .img-70{width:70%;height:70%;}
 .img-75{width:75%;height:75%;}
 .img-60{width:60%;height:60%;}
-.img-50{width:50%;height:50%;}
+.img-50{max-width:50%;height:50%;}
 .img-40{width:40%;height:40%;}
 .img-33{width:33%;height:33%;}
 .img-25{width:25%;height:25%;}
 .img-20{width:20%;height:20%;}
-.img-10{width:10%height:10%;}
+.img-10{width:10%; height:10%;}
+.width-50{width: 50%;
+}
+.img-lang-logo{width:80%;}
 
 .half-img{width:50%;height:50%;}
 .quarter-img{width:25%;height:25%;}
@@ -287,7 +290,7 @@ blockquote{width: 90%;}
 
 /* ================================================  END OF GLOBAL STYLES ======================================= */
 
-/* 
+/*
 /* This overrides text-transform that is created by jQuery Mobile */
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{
     text-shadow: none !important;}
@@ -351,13 +354,13 @@ nav.navbar.navbar-default{
                 text-decoration: none;}
 
 /**
- * #code-content overrides any Bootstrap styles for any of the Code Samples pages (also has the static-content class applied) 
+ * #code-content overrides any Bootstrap styles for any of the Code Samples pages (also has the static-content class applied)
  */
 #code-content h1, h2, h3, h4{
     color: #FFFFFF;}
     #code-content h1{
-        font-size: 2.5rem; 
-        letter-spacing: 0.5em; 
+        font-size: 2.5rem;
+        letter-spacing: 0.5em;
         margin-top: 0%;}
         #code-content a{
             color: #252525;
@@ -388,7 +391,7 @@ nav.navbar.navbar-default{
         float: left;
 /*        position: relative;*/
         width:47%;}
-.footer-left, .footer-right{ letter-spacing: 0.1rem; 
+.footer-left, .footer-right{ letter-spacing: 0.1rem;
     background-color: transparent;
 }
 .footer-left > li{font-size:1.5rem;}
@@ -437,12 +440,12 @@ nav.navbar.navbar-default{
  * STANDARD PAGES: TEMPLATED STYLES
  */
 .static-content{
-    margin: auto; 
-    padding-left: 1em; 
+    margin: auto;
+    padding-left: 1em;
     padding-right: 10em;
-    margin-top: 10em; 
+    margin-top: 10em;
     margin-bottom: 10em;
-    background-color: rgba(255,255,255, .25); 
+    background-color: rgba(255,255,255, .25);
     color: #000000;
     width: 80%;}
     .static-content p{
@@ -450,17 +453,17 @@ nav.navbar.navbar-default{
         letter-spacing: 0.3px;}
     .static-content h1{
         font-size: 3em; letter-spacing: 2px; width: 50%; text-align: center;
-        text-transform: uppercase; 
+        text-transform: uppercase;
         color: #252525;
-        padding-top: 0.2em; 
-        padding-bottom: 0.2em; 
+        padding-top: 0.2em;
+        padding-bottom: 0.2em;
         padding-left: 0.2em;}
     .static-content h3{
-        font-size: 2.5em; 
-        letter-spacing: 2px; 
+        font-size: 2.5em;
+        letter-spacing: 2px;
         text-align: center;
         text-transform: uppercase;
-        color: #252525; 
+        color: #252525;
         width: 50%;
         padding-top: 0.2em; padding-bottom: 0.2em; padding-left: 1%;}
     .static-content a{
@@ -468,15 +471,15 @@ nav.navbar.navbar-default{
         transition-duration: 0.5s;
         font-weight: bold;}
         .static-content a:hover{
-            color: #252525; 
+            color: #252525;
             text-decoration: none;
             transition-duration: 0.5s;
-            border-top: 0.5px solid #363636; 
+            border-top: 0.5px solid #363636;
             border-bottom: 0.5px solid #363636;}
     .static-content ul{
         list-style: none;}
     .static-content > img{
-       margin: auto; 
+       margin: auto;
        margin-right: 0%;}
 
 #content{
@@ -507,11 +510,11 @@ nav.navbar.navbar-default{
  * There is an alternative example using Javascript/AJAX entirely at: http://www.codechewing.com/library/automatic-reloading-image-gallery-with-ajax-jquery/
  */
 .photo-link {
-    padding:5px; 
-    margin:5px; 
-    border:1px solid #ccc; 
-    display:block; 
-    width:200px; 
+    padding:5px;
+    margin:5px;
+    border:1px solid #ccc;
+    display:block;
+    width:200px;
     float: left;}
 .photo-link:hover {
     border-color: #999;}
@@ -558,7 +561,7 @@ nav.navbar.navbar-default{
 .secure h3{
     top-margin: 150px;}
 .page-header.gallery-header{
-    margin-left: 4%; 
+    margin-left: 4%;
     font-size:1.95rem;
     width: 94%;}
 
@@ -619,7 +622,7 @@ nav.navbar.navbar-default{
         position: relative;
         width: 300px;
         height: 510px;
-        padding: 10px;} 
+        padding: 10px;}
         #slideshow > div {
             position: absolute;
             top: 10px;
@@ -642,47 +645,47 @@ nav.navbar.navbar-default{
 /**
 * ABOUT PAGE
 */
-.static-content.about{ 
+.static-content.about{
     margin-bottom: 10%;}
     .static-content.about h1{
-        background-color: transparent; 
+        background-color: transparent;
         color: #252525; font-size: 4rem;
         /*text-shadow: #363636 2px 3px 4px;*/
-        width: 80%; 
-        text-align: left; 
+        width: 80%;
+        text-align: left;
         border: none;}
     .static-content.about h3{
         font-size: 2.5rem;
-        color: #252525; 
-        background-color: transparent; 
+        color: #252525;
+        background-color: transparent;
         border: none;
-        text-align: left; 
-        border-bottom: 3px solid #1A6FB0; 
+        text-align: left;
+        border-bottom: 3px solid #1A6FB0;
         border-radius: 0px;}
     .static-content.about h4{
         font-size: 2.25rem;
-        letter-spacing: 0.25rem; 
-        border-bottom: 3px solid #1A6FB0; 
+        letter-spacing: 0.25rem;
+        border-bottom: 3px solid #1A6FB0;
         text-transform: uppercase;}
 
 /* About page: Background section */
-.background, .skillset, .development-history, .academic-history { 
+.background, .skillset, .development-history, .academic-history {
     width: 90%;}
     .background p{
         font-size: 1.5rem;}
 
 /* About page: Skillset section */
-.ul-header{ 
+.ul-header{
    /* padding: 1% 0 0 1%;*/
    padding: 0.5%;
-    font-size: 2rem; 
+    font-size: 2rem;
     background-color: rgba(0,0,0,0.25);
     margin-left: -1.5%;}
-    .skills li{ 
-        font-size: 1.75rem; 
+    .skills li{
+        font-size: 1.75rem;
         font-weight: bold;
         /*margin-left: -2%;*/
-        line-height: 2; 
+        line-height: 2;
         letter-spacing: 1px;}
 
 /* About page: Development/work history section */
@@ -692,7 +695,7 @@ nav.navbar.navbar-default{
      background-color: rgba(0,0,0,0.25);
 }
  .history-title{
-    font-size: 2rem; 
+    font-size: 2rem;
     font-weight: bold;
     background-color: transparent;
     line-height: 2; }
@@ -702,8 +705,8 @@ nav.navbar.navbar-default{
     }
     .history-header > a{
         color: #524830;
-        font-weight: bold; 
-        text-decoration: underline;  
+        font-weight: bold;
+        text-decoration: underline;
         border: none;}
 
 /**
@@ -712,18 +715,18 @@ nav.navbar.navbar-default{
 .static-content.general-coding{
     width: 80%;}
     .static-content.general-coding h1{
-        background-color: transparent; 
-        color: #252525; 
+        background-color: transparent;
+        color: #252525;
         font-size: 4rem;
         /*text-shadow: #363636 2px 3px 4px;*/
-        width: 80%; 
-        text-align: left; 
+        width: 80%;
+        text-align: left;
         border: none;}
-        
+
 /* General Coding Information page: Header for each programming language */
 .section-header{
-    color: #252525; 
-    background-color: transparent; 
+    color: #252525;
+    background-color: transparent;
     border: none;
     display: block;
     text-align: left; }
@@ -739,29 +742,29 @@ nav.navbar.navbar-default{
     box-shadow: #252525 2px 2px 5px;}
 
 .static-content.code-sample-page h1{
-    text-align: left; 
-    letter-spacing: 1rem; 
+    text-align: left;
+    letter-spacing: 1rem;
     margin-bottom: 5%;}
 
 .static-content.code-sample-page h3{
     text-align: left;
-    margin-top: 5%; 
-    letter-spacing: 0.5rem; 
+    margin-top: 5%;
+    letter-spacing: 0.5rem;
     margin-left: -1%;}
 
 .static-content.code-sample-page p{
-    font-size: 1.5rem; 
+    font-size: 1.5rem;
     width: 90%;}
 
 /* Specific styles for javascript-program pages */
 .page-header.extended-header{
     width: 90%;
-    font-size: 3.25rem !important; 
+    font-size: 3.25rem !important;
     text-align: left;}
 .program-description{
     width: 90%;}
     .program-description h3{
-        font-size: 2.5rem; 
+        font-size: 2.5rem;
         margin-left: -2%;}
     .program-description p{
         font-size: 2rem;}
@@ -803,7 +806,7 @@ nav.navbar.navbar-default{
     color: #221E14;
     background-color: #FFFFFF;
     transition-duration: 0.75s;}
- 
+
 .code-example > .indent-1{
     margin-left: 1%;}
 .code-example > .indent-2{
@@ -904,7 +907,7 @@ nav.navbar.navbar-default{
 .post-body{
     text-transform: none;
     font-family: 'Open Sans', sans-serif;
-    
+
 }
 .post-body p{
     font-size: 1.75rem;
