--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -1,3 +1,35 @@
+/**
+ * Color Reference:
+ * Dark Gold: #423A26
+ * Brown: #221F13
+ */
+/* ADMIN DASHBOARD NAV/HEADER */
+.admin-nav-wrapper{
+    padding: 0.5%;
+    background: #221F13;}
+    .admin-app-title{
+        float: left;
+        width: 10%;
+        background: #221F13;
+        text-align: center;
+        padding: 0.5%;}
+    .admin-nav-wrapper a{
+        color: #fff;
+        text-transform: uppercase;}
+    .admin-nav-ul{
+        display: block;
+        margin: 0 auto;
+        width: 50%;
+        text-align: center;
+        list-style: none;}
+        .admin-nav-ul .current-user{
+            font-size: 1.3rem;
+            font-weight: 600;
+            letter-spacing: 1px;}
+            .logout-ul{
+                padding: 1%;}
+
+
 #admin-backdrop {
   background: #252525; margin-top: -2%;
   width: 100%; height: 860px;
@@ -9,3 +41,31 @@
 .updateList{ list-style-type: none; font-size: 1.2em;}
 .updateList > li > a{ color: #252525; text-decoration: none; transition-duration: 0.4s;}
 .updateList > li > a:hover{color: black; font-weight: bold; transition-duration: 0.4s; letter-spacing: 0.5px;}
+
+/* ADMIN POSTS TABLE AND BUTTONS */
+.post-table form{
+    text-align: center;}
+.post-table td{
+    text-align: center;
+    line-height: 1.5;}
+.post-table .post-btn{
+    padding: 0 1rem 0 1rem;
+    color: #FFF;
+    background-color: #000;
+    font-weight: normal;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid black;}
+    .post-btn:hover{
+        color: #fff !important;
+        background-color: #313131;}
+.del-post-warn-btn{
+    padding: 0 1rem 0 1rem;
+    color: #FFF;
+    background-color: #d40000;
+    font-weight: normal;
+    text-transform: uppercase;
+    border: 1px solid #d40000;}
+    .del-post-warn-btn:hover{
+        background-color: #3F0000;
+        color: #FFF;}
