--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,3 @@
-/**
- * EXAMPLE OF HARD SET OF FONT WEIGHT/BASE
- */
-/*@font-face {
-    font-weight:400;
-    font-family:'Rleud';
-    src:url('webfonts/335DE4_1_0.eot');
-    src:url('webfonts/335DE4_1_0.eot?#iefix') format('embedded-opentype'),
-        url('webfonts/335DE4_1_0.woff2') format('woff2'),
-        url('webfonts/335DE4_1_0.woff') format('woff'),
-        url('webfonts/335DE4_1_0.ttf') format('truetype'); }*/
-
 
 /* ===== COLOR MAP =====
 *  Black = #000000;
@@ -17,7 +5,7 @@
 *  etc
 * *----------------*/
 /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
+/* @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One'); */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
 
@@ -171,8 +159,7 @@ html{
     color:#FFF;
     background:#252525;
     font:10px/1 'Rleud', sans-serif; }
-/* body {
-    position:relative; } */
+
 body{
     min-height: 100vh;
     position: relative;
@@ -200,12 +187,10 @@ blockquote{width: 90%;}
 .h3{font-size: 3rem !important; }
 .h4{font-size: 2rem !important;}
 .mid-size-font{
-    /* font-family: 'proza_libresemibold', sans-serif;  */
     font-family: 'Open Sans', sans-serif;
     font-size: 2.5rem;
 }
 .med-size-font{
-    /* font-family: 'proza_libresemibold', sans-serif;  */
     font-family: 'Open Sans', sans-serif;
     font-size: 1.5rem;
 }
@@ -972,4 +957,41 @@ nav.navbar.navbar-default{
 .file-icon{
     width: 5rem !important;
     height:  5rem !important;
+}
+
+/* ===== 404 ======= */
+.error-container{
+    padding-top: 8%;
+    margin: 0 auto;
+    width: 70%;
+    text-align: center;
+}
+.error-container p{
+    font-size:2rem;
+}
+.error-container .error-header{
+    /* text-align: center; */
+}
+.error-container .error-link > a{
+    padding: 1%;
+    background:#82734C;
+    text-align: center;
+    color: black;
+}
+.error-container .error-link > a:hover{
+    background: #252525;
+    color: #ccc;
+    text-decoration: none;
+}
+.error-container .error-link{
+    font-size: 2rem !important;
+}
+.error-container .pointer-arrow{
+    font-size: 3rem;
+    transition-duration: 0.3s;
+}
+.error-container .pointer-arrow:hover{
+    font-size: 5rem;
+    cursor: none;
+    transition-duration: 0.3s;
 }
